--- a/info.css
+++ b/info.css
@@ -1,9 +1,11 @@
 body{
-  font-family: "Roboto", sans-serif;
-font-weight: 300;
-font-style: normal;
+  font-family: "Source Code Pro", monospace;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   height: 1500px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   background:linear-gradient(#0e5f4d, #051d18) ;
@@ -47,7 +49,7 @@ font-style: normal;
  display: flex;
  flex-direction: column;
  background-color:rgb(176, 199, 182);
- color: black;
+ color: white;
 }
 h2{
   color: #7d8b88;
@@ -58,19 +60,22 @@ h2{
   height: 400px;
   display: grid;
   grid-template-columns:40% 40%;
-  row-gap: 10px;
-  column-gap: 5%;
+  row-gap: 30px;
+  column-gap: 7%;
   justify-content: center;
-  padding-bottom: 20px;
+  padding-bottom: 50px;
   padding-top: 20px;
   font-weight: 500;
 }
 .services div{
   border: none;
   position: relative;
+  border-radius: 10px;
+  cursor: pointer;
+
 }
 .geoone{
-  background-image: url(geospatial-analysis-visualization-korem.webp);
+  background-image: url(geospatial-analysis.jpg);
   background-size: contain;
 }
 .geotwo{
@@ -101,7 +106,7 @@ color:rgb(176, 199, 182);
 .services span{
 position: absolute;
 bottom: 0;
-background-color: rgba(136, 135, 135, 0.514);
+background-color: rgba(39, 38, 38, 0.514);
 left: 0;
 right: 0;
 bottom: 10%;
@@ -109,6 +114,7 @@ top: 70%;
 display: flex;
 justify-content: center;
 align-items: center;
+padding: 5px;
 }
 .contact{
   width: 100%;
@@ -121,4 +127,11 @@ align-items: center;
 }
 .contact div{
   text-align: center;
+}
+.logo{
+  width: 250px;
+  background: none;
+  position: absolute;
+  top: 5%;
+  opacity: 0.7;
 }
